--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,12 @@ li {
     font-weight: bold;
     font-size: 16px;
 }
+
+.footer {
+    text-align: right;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: white;
+    font-size: calc(1vw + 1px);
+  }
